operator-1/jtproxy/deploy/jtapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jtapp
  namespace: jtthink-system
spec:
  selector:
    matchLabels:
      app: jtapp
  replicas: 1
  template:
    metadata:
      labels:
        app: jtapp
    spec:
      containers:
        - name: jtapp
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jtapp
  namespace: jtthink-system
spec:
  ports:
    - port: 10000
      protocol: TCP
      targetPort: 80
  selector:
    app: jtapp
